# TwitchTool

./: README.md  package.json  pyproject.toml
TwitchTool/: __main__.py
TwitchTool/discordBot/: discordBot.py
TwitchTool/twitchBot/: __init__.py  twitchBot.py
